--- a/i18n/zh_CN/LC_MESSAGES/sms.po
+++ b/i18n/zh_CN/LC_MESSAGES/sms.po
@@ -9,20 +9,23 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-06-19 18:48-0400\n"
+"POT-Creation-Date: 2015-12-14 13:18+1000\n"
 "PO-Revision-Date: 2015-11-23 13:52+0200\n"
 "Last-Translator: james <zhulizhong@gmail.com>\n"
-"Language-Team: Simplified Chinese "
-"<http://weblate.freepbx.org/projects/freepbx/sms/zh_CN/>\n"
-"Language: zh_CN\n"
+"Language-Team: Simplified Chinese <http://weblate.freepbx.org/projects/"
+"freepbx/sms/zh_CN/>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: zh_CN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Generator: Weblate 2.2-dev\n"
 
 msgid "Are you Sure you wish to delete this chat history?"
 msgstr ""
+
+msgid "Connectivity"
+msgstr "通信接口连接"
 
 msgid "Controls"
 msgstr "控制"
@@ -52,6 +55,9 @@ msgstr ""
 msgid "No Messages"
 msgstr ""
 
+msgid "SMS"
+msgstr ""
+
 msgid "Search"
 msgstr "查询"
 
@@ -67,8 +73,10 @@ msgstr "系统"
 msgid "There was an error sending this message: "
 msgstr ""
 
-msgid "To"
+msgid ""
+"This module is used to configure and manage SMS chat interfaces inside of "
+"the new UCP."
 msgstr ""
 
-#~ msgid "Connectivity"
-#~ msgstr "通信接口连接"
+msgid "To"
+msgstr ""
