--- a/i18n/sms.pot
+++ b/i18n/sms.pot
@@ -3,19 +3,22 @@
 # For licensing information, please see the file named LICENSE located in the module directory
 #
 # FreePBX language template for sms
-# Copyright (C) 2008-2015 Sangoma, Inc.
+# Copyright (C) 2008-2016 Sangoma, Inc.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-12-14 13:18+1000\n"
+"POT-Creation-Date: 2016-01-08 20:06-0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+msgid "Adaptor not loaded"
+msgstr ""
 
 msgid "Are you Sure you wish to delete this chat history?"
 msgstr ""
@@ -39,6 +42,9 @@ msgid "Last Message Date"
 msgstr ""
 
 msgid "Me"
+msgstr ""
+
+msgid "Message could not be delivered"
 msgstr ""
 
 #, perl-format
