--- a/i18n/sms.pot
+++ b/i18n/sms.pot
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-11 18:39-0800\n"
+"POT-Creation-Date: 2016-06-09 23:01-0700\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -45,6 +45,12 @@ msgstr ""
 msgid "Direction"
 msgstr ""
 
+msgid "File Size is too large. Max: 1.5mb"
+msgstr ""
+
+msgid "File size is too large. Max: 1.5mb"
+msgstr ""
+
 msgid "Invalid Number"
 msgstr ""
 
@@ -54,7 +60,7 @@ msgstr ""
 msgid "Me"
 msgstr ""
 
-msgid "Message could not be delivered"
+msgid "New Message"
 msgstr ""
 
 #, perl-format
@@ -79,12 +85,6 @@ msgstr ""
 msgid "Sent"
 msgstr ""
 
-msgid "System"
-msgstr ""
-
-msgid "There was an error sending this message: "
-msgstr ""
-
 msgid ""
 "This module is used to configure and manage SMS chat interfaces inside of "
 "the new UCP."
@@ -94,4 +94,10 @@ msgid "Time"
 msgstr ""
 
 msgid "To"
+msgstr ""
+
+msgid "Unsupported file format"
+msgstr ""
+
+msgid "Unsupported file type"
 msgstr ""
